# ULTRA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  csv_to_binary.py  quetion1.cpp
Algorithms/: BipartiteGraphAlgorithms.h  DepthFirstSearch.h  GreedyVertexColoring.h  StronglyConnectedComponents.h
Algorithms/CH/: CH.h  CHUtils.h
Algorithms/CSA/: CSA.h  Debugger.h  DijkstraCSA.h  HLCSA.h  IsoDijkstraCSA.h  IsoPHASTCSA.h  OneToAllDijkstraCSA.h  Profiler.h  ULTRACSA.h  UPCSA.h
Algorithms/Dijkstra/: Dijkstra.h  IsoDijkstra.h
Algorithms/Isochrone/: DistanceBoundComputation.h  EccentricityComputation.h  IsoPHAST.h
Algorithms/MaxFlowMinCut/: Dinic.h  VertexSeparator.h
Algorithms/Partition/: InertialFlow.h
Algorithms/RAPTOR/: Debugger.h  DijkstraMcRAPTOR.h  DijkstraRAPTOR.h  HLRAPTOR.h  InitialTransfers.h  MCR.h  McRAPTOR.h  MultimodalMCR.h  MultimodalULTRAMcRAPTOR.h  OneToAllDijkstraRAPTOR.h  Profiler.h  RAPTOR.h  (+3 more)
Helpers/: Assert.h  Calendar.h  ConstructorTags.h  Helpers.h  HighlightText.h  Meta.h  MultiThreading.h  TaggedInteger.h  Timer.h  Types.h
Runnables/: BuildBucketCH.cpp  BuildCoreCH.cpp  BuildNetworkExample.script  ComputeShortcuts.cpp  DelayExperiments.cpp  Isochrones.cpp  Makefile  Network.cpp  RunCSAQueries.cpp  RunRAPTORQueries.cpp  ULTRA.cpp  ULTRAPHAST.cpp  downloadExample.sh  exampleNetwork.script  question1.cpp  question1.cpp.txt  question2.cpp
Shell/: BasicShell.h  Command.h  LineBuffer.h  ParameterizedCommand.h  Shell.h
Visualization/: Borders.h  Color.h  MapVisualization.h  PDF.h  PNG.h  SVG.h  TimeTableVisualization.h  Visualization.h
(+160 files in other folders)
